# federation-manager

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  client.py  compose.yaml  core.py  models.py  provider.py  pyproject.toml  requests.py  sla.py  tmp.py  users.py
.devcontainer/: compose.extend.yaml  devcontainer.json
.github/workflows/: docker-build.yaml  sonar.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 6159bf2b47dd_initial_migration.py
docker/: Dockerfile  compose.yaml  start.sh
examples/: client.py
fed_mgr/: __init__.py  auth.py  config.py  db.py  exceptions.py  kafka.py  logger.py  main.py  utils.py
fed_mgr/cli/: __init__.py  identity_providers.py  main.py  providers.py  users.py  utils.py
fed_mgr/cli/identity_providers/: __init__.py  commands.py
fed_mgr/cli/identity_providers/user_groups/: __init__.py  commands.py
fed_mgr/cli/identity_providers/user_groups/slas/: __init__.py  commands.py  projects.py
fed_mgr/cli/providers/: __init__.py  commands.py  identity_providers.py  projects.py  regions.py
fed_mgr/cli/providers/projects/: __init__.py  regions.py
fed_mgr/v1/: __init__.py  adapters.py  crud.py  models.py  router.py  schemas.py
fed_mgr/v1/health/: endpoints.py  schemas.py
fed_mgr/v1/identity_providers/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mgr/v1/identity_providers/user_groups/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mgr/v1/identity_providers/user_groups/slas/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mgr/v1/identity_providers/user_groups/slas/projects/: __init__.py  crud.py  endpoints.py  schemas.py
fed_mgr/v1/locations/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mgr/v1/providers/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mgr/v1/providers/identity_providers/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mgr/v1/providers/projects/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mgr/v1/providers/projects/regions/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mgr/v1/providers/regions/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mgr/v1/users/: __init__.py  crud.py  dependencies.py  endpoints.py  schemas.py
fed_mng/: auth.py  config.py  db.py  enums.py  logger.py  main.py  main2.py  main4.py  models.py  router.py  site_admin.py  socket_manager.py
fed_mng/api/: dependencies.py  utils.py
fed_mng/api/v1/: endpoints.py  users.py
fed_mng/crud/: users.py
fed_mng/socketio/: admin.py  site_admin.py  site_tester.py  sla_mod.py  socket_manager.py  user_group_mgr.py  utils.py
fed_mng/workflow/: engine.py  manager.py  serializer.py  spiff.py  task_handlers.py
jenkins/: docker.Jenkinsfile  tests.Jenkinsfile
kubernetes/: db-cm0-configmap.yml  db-deployment.yaml  fed-mgr-cm0-configmap.yml  fed-mgr-deployment.yaml  fed-mgr-ingress.yaml  fed-mgr-service.yaml  opa-cm0-configmap.yaml  opa-deployment.yaml  opa-service.yaml
opa/: README.md  data.json  example-policy.rego  policy.rego
processes/: provider-federation-request.bpmn  test.bpmn  test2.bpmn
scripts/: login.sh
tests/: conftest.py  item_data.py  test_adapters.py  test_auth.py  test_auth_cases.py  test_config.py  test_crud.py  test_db.py  test_db_fake_user.py  test_identity_providers_crud.py  test_identity_providers_endpoints.py  test_identity_providers_schemas.py  test_kafka.py  test_lifespan.py  test_logger.py  test_models.py  test_schemas.py  test_socketio_site_admin.py  test_user_crud.py  test_user_endpoints.py  test_user_schemas.py  test_utils.py  utils.py
tests/v1/: test_adapters.py  test_v1_utils.py
tests/v1/cruds/: conftest.py  test_crud.py  test_identity_providers_crud.py  test_idp_overrides_crud.py  test_locations_crud.py  test_proj_reg_config_crud.py  test_projects_crud.py  test_prov_idp_rel_crud.py  test_providers_crud.py  test_reg_overrides_crud.py  test_regions_crud.py  test_slas_crud.py  test_user_crud.py  test_user_groups_crud.py
tests/v1/dependencies/: test_idp_dependencies.py  test_idp_overrides_dependencies.py  test_project_dependencies.py  test_provider_dependencies.py  test_reg_overrides_dependencies.py  test_region_dependencies.py  test_sla_dependencies.py  test_user_dependencies.py  test_user_group_dependencies.py
tests/v1/endpoints/: conftest.py  test_identity_providers_endpoints.py  test_idp_overrides_endpoints.py  test_locations_endpoints.py  test_proj_reg_config_endpoints.py  test_projects_endpoints.py  test_prov_idp_rel_endpoints.py  test_providers_endpoints.py  test_region_overrides_endpoints.py  test_regions_endpoints.py  test_sla_projects_endpoints.py  test_slas_endpoints.py  test_user_endpoints.py  test_user_groups_endpoints.py
tests/v1/models/: conftest.py  test_identity_provider_models.py  test_idp_overrides_models.py  test_project_models.py  test_provider_models.py  test_reg_overrides_models.py  test_region_models.py  test_sla_models.py  test_user_group_models.py  test_user_models.py
tests/v1/schemas/: test_identity_providers_schemas.py  test_idp_overrides_schemas.py  test_locations_schemas.py  test_proj_reg_config_schemas.py  test_projects_schemas.py  test_prov_idp_rel_schemas.py  test_provider_schemas.py  test_reg_overrides_schemas.py  test_regions_schemas.py  test_schemas.py  test_sla_schemas.py  test_user_groups_schemas.py  test_user_schemas.py
